# lok-sabha-dataset

./: .gitignore  DATASET_CARD.md  LICENSE  README.md  SOURCE_ISSUES.md  pyproject.toml
data/: source_issues.jsonl  source_issues_manual.jsonl
src/lok_sabha_dataset/: build.py  config.py  inspect.py  loader.py  publish.py  source_issues.py  splitter.py
src/lok_sabha_dataset/pipeline/: curate.py  download.py  extract.py  utils.py
tests/: test_curate.py  test_download.py  test_extract_doc.py  test_loader.py  test_splitter.py  update_golden.py
tests/fixtures/16/pdfs/session_5/: AS10.docx  AS100.docx  AU1267.doc  AU179.doc  AU2547.doc  AU2960.doc  AU3302.doc  AU3470.doc  AU3712.doc  AU408.doc  AU637.doc
tests/golden/16/session_5/: AS1.json  AS10.json  AS100.json  AU1267.json  AU179.json  AU2547.json  AU2960.json  AU3302.json  AU3470.json  AU352.json  AU3712.json  AU408.json  AU637.json
tests/golden/16/session_5_easyocr/: AU642.json  AU646.json
