[project]
name = "lok-sabha-dataset"
version = "0.1.0"
description = "Build and publish a HuggingFace dataset of Indian Lok Sabha parliamentary Q&A records"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19",
    "huggingface_hub>=0.23",
    "pyarrow>=15",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lok_sabha_dataset"]
